<resources>
    <string name="app_name">Programa</string>
    <string name="button">Largo</string>
    <string name="button2">Corto</string>
    <string name="SL">SL</string>
    <string name="TP">TP</string>
    <string name="modificar">Modificar</string>
    <string name="cerrar">Cerrar</string>
    <string name="actualizar">Refrescar</string>
    <string name="hintp">0.00</string>
    <string name="hintsl">0.00</string>
</resources>