<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/largo"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginTop="32dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/corto"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/largo"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/cerrar"
        android:layout_width="99dp"
        android:layout_height="234dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cerrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corto" />

    <EditText
        android:id="@+id/ettp"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="@string/hintp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etsl"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/etsl"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="@string/hintsl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cerrar"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="22dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:labelFor="@+id/editTextNumberDecimal"
        android:text="@string/SL"
        app:layout_constraintEnd_toStartOf="@+id/ettp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cerrar" />

    <TextView
        android:id="@+id/textView3"
        android:labelFor="@+id/editTextNumberDecimal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/TP"
        app:layout_constraintEnd_toStartOf="@+id/etsl"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/modificar"
        android:layout_width="209dp"
        android:layout_height="70dp"
        android:layout_marginTop="84dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etsl" />

    <TableRow
        android:layout_width="245dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toStartOf="@+id/cerrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corto">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="20000.00" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="40000.00" />
    </TableRow>

    <Button
        android:id="@+id/refrescar"
        android:layout_width="149dp"
        android:layout_height="70dp"
        android:layout_marginTop="64dp"
        android:text="@string/actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toEndOf="@+id/etsl"
        app:layout_constraintTop_toBottomOf="@+id/cerrar" />

</androidx.constraintlayout.widget.ConstraintLayout>